--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap');
 :root {
-    --cor-de-fundo: #1E1E1E;
-    --verde: #6FFF57;
-    --branco: #ffffff;
-    --botao-ativo: #3A375E;
-    --botao-inativo: rgba(58, 55, 94, 0.5);
-    --texto-fundo: rgba(58, 55, 94, 0.3);
+    --cor-de-fundo: #b98d80;
+    --verde: #CC9A8B;
+    --branco: #000000;
+    --botao-ativo:#CC9A8C;
+    --botao-inativo: #EAC2BC;
+    --texto-fundo: rgba(9, 77, 32, 0.877);
      }
      body {
         background-color: var(--cor-de-fundo);
